--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@ the_random_page
 
 <div class="container mt-md-5 mb-md-5 ">
   <div class="info row">
-    <div class="card mx-md-2 col-md-4">
+    <div class="cardinfo card mx-md-2 col-md-4">
       <div class="card-title bg-dark ">
         <h1 class="info1 text-primary"> Developer </h1>
       </div>
@@ -43,7 +43,7 @@ the_random_page
 
       </div>
     </div>
-    <div class="card mx-md-2 col-md-4">
+    <div class="card cardinfo mx-md-2 col-md-4">
       <div class="card-title bg-dark ">
         <h1 class="info1 text-muted"> Contact </h1>
       </div>
@@ -56,17 +56,20 @@ the_random_page
 
 
     </div>
-    <div class="card mx-md-2 col-md-4">
+    <div class="card cardinfo mx-md-2 col-md-4">
       <div class="card-title bg-dark ">
         <h1 class="text-warning info1"> FAQ </h1>
 
       </div>
-      <form class="form" action="index.html" method="post">
-        <label for="">Your Name</label>
-        <input class="form-control" type="text" name="" value="">
-        <label for="">Question</label>
-        <input class="form-control" type="text" name="" value="">
-        <button class="btn btn-primary float-right mt-md-2" type="button" name="button">Submit</button>
+      <div class= "mx-md-1">
+        <form class="form " action="index.html" method="post">
+          <label for="">Your Name</label>
+          <input class="form-control" type="text" name="" value="">
+          <label for="">Question</label>
+          <input class="form-control" type="text" name="" value="">
+          <button class="btn btn-primary float-right mt-md-2" type="button" name="button">Submit</button>
+
+      </div>
 
       </form>
 
